# tech-safety-playground

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: sae_resid_post_l0.yaml  sae_resid_post_l1.yaml  sae_resid_pre_l0.yaml
notebooks/: mlflow.db
projects/activation-oracles/: README.md  eval_report.html  main.py  pyproject.toml
projects/activation-oracles/configs/: quick.yaml  train_config.yaml
projects/activation-oracles/src/: data.py  eval.py  model.py  train.py
projects/activation-oracles/tests/: test_smoke.py
projects/sparse-autoencoders/: README.md  plots.py  pyproject.toml
projects/sparse-autoencoders/configs/: sae_resid_post_l0.yaml  sae_resid_post_l1.yaml
projects/sparse-autoencoders/notebooks/: exploration.ipynb
projects/sparse-autoencoders/src/: mlflow_utils.py  steering_sweep.py
src/: analyze_features.py  data.py  mlflow_utils.py  steering_demo.py  train_sae.py  viz.py
tests/: test_smoke.py
