[project]
name = "activation-oracles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "mlflow>=3.12.0",
    "peft>=0.19.1",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
